--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,8 @@
 .app {
   padding: 0 3.2rem;
   border-top: 7px solid var(--color-primary);
+
+  /* Temporário até ficar pronto */
+  position: relative;
+  
 }
