--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -22,9 +22,18 @@
   list-style: none;
 }
 
-.navbar__item {
+
+.navbar__item:link,
+.navbar__item:visited {
   font-size: 2rem;
   font-weight: 700;
   letter-spacing: 0.5px;
   text-transform: uppercase;
+  color: var(--color-black);
+  text-decoration: none;
+}
+
+.navbar__item:hover,
+.navbar__item:active {
+  color: var(--color-primary);
 }
