--- a/src/components/PostsPagination/PostsPagination.module.css
+++ b/src/components/PostsPagination/PostsPagination.module.css
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
-
+  
+  /* border: 2px solid red; */
   padding: 4.8rem;
 }
 
@@ -48,6 +48,9 @@
 
   width: 3rem;
   height: 3rem;
+  padding: 1.4rem;
+  margin: 0 0.6rem;
+
   border-radius: 1000px;
   cursor: pointer;
 
