--- a/src/components/MainComponent/MainComponent.module.css
+++ b/src/components/MainComponent/MainComponent.module.css
@@ -42,3 +42,10 @@
   font-size: 2rem;
   text-transform: uppercase;
 }
+
+.postsPaginationContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4.8rem;
+}
