--- a/src/components/PostsPagination/PostsPagination.module.css
+++ b/src/components/PostsPagination/PostsPagination.module.css
@@ -7,6 +7,8 @@
 }
 
 .arrowContainer {
+  border: none;
+  background-color: transparent;
   display: flex;
   flex-direction: column;
   align-items: center;
