--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,12 @@
 
   --color-gray: #555;
   --color-lightgray: #e9e9e9;
-
 }
 
 body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
   margin: 0;
   font-family: 'Rubik', sans-serif;
 
